--- a/c/pages/term-info.html
+++ b/c/pages/term-info.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page page_active" id="search-page">
         <div>
-            <form id="search-fm" class="form form_search" action="/action/bm/term-info/search" method="post">
+            <form id="search-fm" class="form form_search" action="/action/bm/term-info/search" method="post" data-options="onSerialize:onSerialize">
                 <table class="form__table">
                     <caption>查询终端信息</caption>
                     <tr>
@@ -61,7 +61,7 @@
                         <tr>
                             <td colspan="4" class="center">
                                 <div style="margin:5px;"></div>
-                                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-search',datagrid:'#search-dg'" style="padding:0 5px;" onclick="$$.search(this)">查询</a> &nbsp;&nbsp;
+                                <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-search',datagrid:'#search-dg'" style="padding:0 5px;" onclick="$$.search(this)" id="search-btn">查询</a> &nbsp;&nbsp;
                                 <a href="javascript:void(0)" class="easyui-linkbutton" data-options="iconCls:'icon-clear',datagrid:'#search-dg'" style="padding:0 5px;" onclick="$$.reset(this)">重置</a>
                             </td>
                         </tr>
@@ -71,7 +71,7 @@
         </div>
         <br>
         <div id="search-dg-tb">
-            <a href="#detail-page" class="easyui-linkbutton" onClick="$$.add(this, event)" data-options="plain:true,iconCls:'icon-add',form:'#detail-fm',onSuccess:$$.addSuccess">新增</a>
+            <a href="#detail-page" class="easyui-linkbutton hide" onClick="$$.add(this, event)" data-options="plain:true,iconCls:'icon-add',form:'#detail-fm',onSuccess:$$.addSuccess" id="add-btn">新增</a>
             <a href="#detail-page" class="easyui-linkbutton" onClick="$$.view(this, event)" data-options="plain:true,iconCls:'icon-view',datagrid:'#search-dg',form:'#detail-fm'">查看详情</a>
             <a href="#detail-page" class="easyui-linkbutton" onClick="$$.view(this, event, 'update')" data-options="plain:true,iconCls:'icon-edit',datagrid:'#search-dg',form:'#detail-fm'" data-action="update">编辑</a>
             <a href="javascript:void(0)" class="easyui-linkbutton" onClick="$$.batchSubmit(this)" data-options="plain:true,iconCls:'icon-remove',datagrid:'#search-dg',url:'/action/bm/term-info/batch-delete',onSuccess:$$.batchSubmitSuccess" data-actions="delete">删除</a>
@@ -80,24 +80,26 @@
             <thead>
                 <tr>
                     <th data-options="field:'chk',checkbox:true"></th>
-                    <th data-options="field:'term_no',width:100">终端标识</th>
-                    <th data-options="field:'mchnt_id',width:100">客户号</th>
-                    <th data-options="field:'linkman',width:100">联系人</th>
-                    <th data-options="field:'mobile',width:100">手机号</th>
-                    <th data-options="field:'shop_name',width:100">门店名称</th>
-                    <th data-options="field:'district_name',width:100">所在地区</th>
-                    <th data-options="field:'addr',width:100">详细地址</th>
-                    <th data-options="field:'term_inves',width:100">终端投资方</th>
-                    <th data-options="field:'maintained_by',width:100">维护人</th>
-                    <th data-options="field:'term_status',width:100">终端状态</th>
-                    <th data-options="field:'expand_inst_id',width:100">拓展方</th>
-                    <th data-options="field:'expand_id',width:100">拓展人</th>
+                    <th data-options="field:'term_no'">终端标识</th>
+                    <!-- <th data-options="field:'mchnt_id'">客户号</th> -->
+                    <th data-options="field:'linkman'">联系人</th>
+                    <th data-options="field:'mobile'">手机号</th>
+                    <th data-options="field:'shop_name'">门店名称</th>
+                    <th data-options="field:'district_name'">所在地区</th>
+                    <th data-options="field:'addr'">详细地址</th>
+                    <th data-options="field:'term_inves_nm'">终端投资方</th>
+                    <th data-options="field:'maintained_by_nm'">维护人</th>
+                    <th data-options="field:'term_status',formatter:formatTermStatus">终端状态</th>
+                    <th data-options="field:'expand_inst_nm'">拓展方</th>
+                    <th data-options="field:'expand_nm'">拓展人</th>
+                    <th data-options="field:'oper_in',formatter:formatOperIn">操作标志</th>
+                    <th data-options="field:'proc_st',formatter:formatProcSt">处理状态</th>
                 </tr>
             </thead>
         </table>
     </div>
     <div class="page" id="detail-page">
-        <form id="detail-fm" class="form form_detail" action="/action/bm/term-info/view" method="post">
+        <form id="detail-fm" class="form form_detail" action="/action/bm/term-info/view" method="post" data-options="onLoad:onLoad">
             <table class="form__table">
                 <caption>终端信息</caption>
                 <tbody>
@@ -173,14 +175,14 @@
                             <label>终端投资方：</label>
                         </td>
                         <td>
-                            <input type="text" name="term_inves" class="easyui-combobox" style="width: 173px;" data-options="required:true">
+                            <input type="text" name="term_inves" class="easyui-combobox" style="width: 173px;" data-options="required:true" id="term_inves">
                             <span class="required">*</span>
                         </td>
                         <td>
                             <label>机具类型：</label>
                         </td>
                         <td>
-                            <input type="text" name="equi_type" class="easyui-combobox" style="width: 173px;" data-options="required:true">
+                            <input type="text" name="equi_type" class="easyui-combobox" style="width: 173px;" data-options="required:true" id="equi_type">
                             <span class="required">*</span>
                         </td>
                     </tr>
@@ -218,8 +220,7 @@
                         </td>
                         <td>
                             <!-- <input type="text" name="term_status" class="easyui-validatebox" data-options="required:true"> -->
-                            <select name="term_status" class="easyui-validatebox" data-options="required:true">
-                                <option value="">--请选择--</option>
+                            <select name="term_status" class="easyui-validatebox" data-options="required:true" id="term_status">
                             </select>
                             <span class="required">*</span>
                         </td>
@@ -227,7 +228,7 @@
                             <label>拓展方：</label>
                         </td>
                         <td>
-                            <input type="text" name="expand_inst_id" class="easyui-combobox" style="width: 173px;" data-options="required:true">
+                            <input type="text" name="expand_inst_id" class="easyui-combobox" style="width: 173px;" data-options="required:true" id="expand_inst_id">
                             <span class="required">*</span>
                         </td>
                     </tr>
@@ -236,7 +237,7 @@
                             <label>拓展人：</label>
                         </td>
                         <td>
-                            <input type="text" name="expand_id" class="easyui-combobox" style="width: 173px;" data-options="required:true">
+                            <input type="text" name="expand_id" class="easyui-combobox" style="width: 173px;" data-options="required:true" id="expand_id">
                             <span class="required">*</span>
                         </td>
                         <td>
@@ -331,11 +332,15 @@
     </div>
     <script type="text/javascript" src="../lib/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="../lib/easyui/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="../lib/My97DatePicker/WdatePicker.js"></script>
+    <script type="text/javascript" src="../js/select2.js"></script>
     <script type="text/javascript" src="../js/base.js"></script>
     <script type="text/javascript" src="../js/st.js"></script>
+    <script type="text/javascript" src="../js/param.js"></script>
     <script type="text/javascript" src="../js/district.js"></script>
     <script type="text/javascript">
-    var typeId = $$.st.alias['term_info'];
+    var query = $$.parseQueryString();
+    var typeId = $$.st.alias['mchnt_base_info'];
     var provinceData = xProvinceCityDistrict['province'];
     var cityData = xProvinceCityDistrict['city']['43'];
 
@@ -349,9 +354,73 @@
     function onChangeCity(newValue, oldValue) {
         if (newValue) {
             var province = $('#province').combobox('getValue');
-            $('#district').combobox('clear').combobox('loadData', xProvinceCityDistrict['district'][province + newValue]);
+            if (province) {
+                $('#district').combobox('clear').combobox('loadData', xProvinceCityDistrict['district'][province + newValue]);
+            }
         }
     }
+
+    function onSerialize(data) {
+        $.extend(data, query);
+    }
+
+    function onLoad(data) {
+        $('#province').combobox('clear').combobox('setValue', data.data.province);
+        $('#city').combobox('clear').combobox('setValue', data.data.city);
+        $('#district').combobox('clear').combobox('setValue', data.data.district);
+    }
+
+    function formatTermStatus(value, rowData, rowIndex) {
+        console.log($$.param['term_status']);
+        return $$.formatField($$.param['term_status'], value);
+    }
+
+    function formatOperIn(value, rowData, rowIndex) {
+        return $$.formatField($$.st.operIn[typeId], value);
+    }
+
+    function formatProcSt(value, rowData, rowIndex) {
+        return $$.formatField($$.st.procSt[typeId], value);
+    }
+
+    function formatOp(value, rowData, rowIndex) {
+        var queryString = $.param(query).replace(/\+/g, '%20');
+        var url = 'photo-copy.html?' + queryString;
+
+        var s = '<a href="' + url + '" target="_blank">影印件</a>';
+
+        return s;
+    }
+
+    function initCombobox() {
+        $$.request('/action/bm/expand-inst/list', {}, function(data) {
+            $('#expand_inst_id').combobox('loadData', data.rows);
+        });
+
+        $$.request('/action/bm/expand/list', {}, function(data) {
+            $('#expand_id').combobox('loadData', data.rows);
+        });
+
+        $$.request('/action/bm/parameter/list', {
+            term_inves: '1',
+            equi_type: '1'
+        }, function(data) {
+            if (data.errcode == 0) {
+                $('#term_inves').combobox('loadData', data.term_inves);
+                $('#equi_type').combobox('loadData', data.equi_type);
+            }
+        });
+    }
+
+    $(function() {
+        $('#term_status').select2().select2('loadData', $$.param['term_status']);
+        initCombobox();
+
+        if(query.mchnt_id) {
+            $('#add-btn').removeClass('hide');
+            $('#search-btn').click();
+        }
+    });
     </script>
 </body>
 
