--- a/c/pages/term-param.html
+++ b/c/pages/term-param.html
@@ -80,10 +80,11 @@
                     <th data-options="field:'chk',checkbox:true"></th>
                     <!-- <th data-options="field:'term_param_id',width:100">终端参数ID</th>
                     <th data-options="field:'mchnt_param_id',width:100">商户参数ID</th> -->
+                    <th data-options="field:'mchnt_cd',width:100">商户号</th>
                     <th data-options="field:'term_id',width:100">终端号</th>
                     <th data-options="field:'status',width:100">参数状态</th>
-                    <th data-options="field:'expand_inst_id',width:100">拓展方</th>
-                    <th data-options="field:'expand_id',width:100">拓展人</th>
+                    <th data-options="field:'expand_inst_nm',width:100">拓展方</th>
+                    <th data-options="field:'expand_nm',width:100">拓展人</th>
                 </tr>
             </thead>
         </table>
