新增分享到朋友

--- a/m/jsapi.html
+++ b/m/jsapi.html
@@ -15,8 +15,6 @@
     <a href="javascript:;" class="weui-btn weui-btn_primary" onclick="testGetNetworkType()">wxGetNetworkType</a>
     <a href="javascript:;" class="weui-btn weui-btn_primary" onclick="testLocation()">wxLocation</a>
     <a href="javascript:;" class="weui-btn weui-btn_primary" onclick="testScanQRCode()">wxScanQRCode</a>
-    <a href="javascript:;" class="weui-btn weui-btn_primary" onclick="testOnMenuShareAppMessage()">wxOnMenuShareAppMessage</a>
-    
     <script type="text/javascript" src="js/jweixin-1.0.0.js"></script>
     <script type="text/javascript" src="js/lib/zepto.js"></script>
     <script type="text/javascript" src="js/lib/weuijs/weuijs.js"></script>
@@ -58,11 +56,10 @@
         wxScanQRCode({});
     }
 
-    function testOnMenuShareAppMessage() {
-    	wxOnMenuShareAppMessage({
-    		title: 'wxOnMenuShareAppMessage'
-    	})
-    }
+    wxOnMenuShareAppMessage({
+		title: 'wxOnMenuShareAppMessage',
+		link: 'http://www.baidu.com'
+	});
     </script>
 </body>
 
