--- a/m/index.html
+++ b/m/index.html
@@ -88,14 +88,34 @@
             </a>
         </div>
     </div>
+    <script type="text/javascript" src="js/jweixin-1.0.0.js"></script>
     <script type="text/javascript" src="js/lib/zepto.min.js"></script>
     <script type="text/javascript" src="js/lib/weuijs/weuijs.min.js"></script>
+    <script type="text/javascript" src="js/wx.js"></script>
     <script type="text/javascript">
+    wxConfig({
+        jsApiList: ['onMenuShareTimeline', 'onMenuShareAppMessage', 'onMenuShareQQ', 'onMenuShareWeibo', 'onMenuShareQZone'],
+        ready: function() {
+            share()
+        }
+    });
+
+    function share() {
+        if (curent_user) {
+            wxOnMenuShare({
+                title: '银信诺',
+                link: window.location.origin + '/p/m/register.html?code=' + curent_user.data.userid
+            });
+        }
+    }
+
+    var curent_user;
     $(function() {
         $$.request('/action/user/view', {}, {
             success: function(data) {
                 if (data.errcode == 0) {
-                    // success(data.rows);
+                    curent_user = data;
+                    share();
                 } else if (data.errcode == 5) {
                     window.location.href = $$.wrapUrl('/m/login.html');
                 } else {
